tests/builder/prefix_non_string.stderr
error: prefix must be a string, got `1`
 --> tests/builder/prefix_non_string.rs:4:11
  |
4 | #[builder(prefix = 1)]
  |           ^^^^^^^^^^
